# yumi-bilibili-download

./: .gitignore  Cargo.toml  README.md  build.rs  【新曲】Srav3R - Wind Again【HARDCORE TANO*C】.audio.tmp  【新曲】Srav3R - Wind Again【HARDCORE TANO*C】.video.tmp
.github/workflows/: release.yml
examples/: download_audio.rs  download_cover.rs  download_vedio_audio.rs  download_vedio_cover.rs  download_vedio_with_no_audio.rs  download_video.rs  download_video_with_no_audio.rs  show_basic_video_info.rs  show_collection_info.rs  show_vedio_info.rs  show_video_info.rs  show_video_info_raw.rs
scripts/: install.ps1  install.sh
src/: actuator.rs  client.rs  error.rs  lib.rs  login.rs  progress.rs  url.rs  util.rs
src/model/: account.rs  collection.rs  download.rs  mod.rs  param.rs  quality.rs  vedio.rs  video.rs
