[package]
name = "yumi-bilibili-download"
version = "0.1.0"
edition = "2024"
description = "A tool for downloading Bilibili resources"

[dependencies]
reqwest = { version = "0.13", features = [
  "json",
  "query",
  "cookies",
  "stream",
] }
tokio = { version = "1", features = ["full"] }
thiserror = "2.0.18"
clap = { version = "4.6.1", features = ["derive"] }
etcetera = "0.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
qrcode = "0.14.1"
