[package]
name = "yumi-bilibili-download"
version = "0.1.0"
edition = "2024"
description = "A tool for downloading Bilibili resources"
license = "MIT"
repository = "https://github.com/yumilengjiao/yumi-bilibili-download"
homepage = "https://github.com/yumilengjiao/yumi-bilibili-download"
readme = "README.md"
rust-version = "1.95"
authors = ["yumilengjiao"]
keywords = ["bilibili", "download", "video", "cli"]

categories = ["command-line-utilities"]

build = "build.rs"

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
reqwest = { version = "0.13", features = [
  "json",
  "query",
  "cookies",
  "stream",
] }
tokio = { version = "1", features = ["full"] }
thiserror = "2.0.18"
clap = { version = "4.6.1", features = ["derive"] }
etcetera = "0.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
qrcode = "0.14.1"
regex = "1.12.3"
urlencoding = "2.1.3"
md5 = "0.8.0"
sanitize-filename = "0.6.0"
colored = "3.1.1"
futures = "0.3.32"
indicatif = "0.18.4"
console = "0.16.3"
